Added Answer Folder

--- a/code-along/day-3/data_cleaning/Data Cleaning.ipynb
+++ b/code-along/day-3/data_cleaning/Data Cleaning.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "e99ac2fd",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "527e9fa2",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "2cd1da74",
    "metadata": {},
    "outputs": [
@@ -76,8 +76,6 @@
        "      <th>emoji_count</th>\n",
        "      <th>hashtags</th>\n",
        "      <th>mentions</th>\n",
-       "      <th>tokenized_text</th>\n",
-       "      <th>clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -90,10 +88,8 @@
        "      <td>our deeds are the reason of this may allah for...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' earthquake', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[our, deeds, are, the, reason, of, this, may, ...</td>\n",
-       "      <td>[deeds, reason, may, allah, forgive, us]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -106,8 +102,6 @@
        "      <td>0</td>\n",
        "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[forest, fire, near, la, ronge, sask, canada]</td>\n",
-       "      <td>[forest, fire, near, la, ronge, sask, canada]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -120,8 +114,6 @@
        "      <td>0</td>\n",
        "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[all, residents, asked, to, shelter, in, place...</td>\n",
-       "      <td>[residents, asked, shelter, place, notified, o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -132,10 +124,8 @@
        "      <td>people receive evacuation orders in california</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' wildfires', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[, people, receive, evacuation, orders, in, ca...</td>\n",
-       "      <td>[, people, receive, evacuation, orders, califo...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -146,10 +136,8 @@
        "      <td>just got sent this photo from ruby as smoke fr...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' alaska, wildfires', 2)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
-       "      <td>[just, got, sent, this, photo, from, ruby, as,...</td>\n",
-       "      <td>[got, sent, photo, ruby, smoke, pours, school, ]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -170,29 +158,15 @@
        "3    people receive evacuation orders in california        1            0   \n",
        "4  just got sent this photo from ruby as smoke fr...       1            0   \n",
        "\n",
-       "                    hashtags mentions  \\\n",
-       "0         (' earthquake', 1)       []   \n",
-       "1                    ('', 0)       []   \n",
-       "2                    ('', 0)       []   \n",
-       "3          (' wildfires', 1)       []   \n",
-       "4  (' alaska, wildfires', 2)       []   \n",
-       "\n",
-       "                                      tokenized_text  \\\n",
-       "0  [our, deeds, are, the, reason, of, this, may, ...   \n",
-       "1      [forest, fire, near, la, ronge, sask, canada]   \n",
-       "2  [all, residents, asked, to, shelter, in, place...   \n",
-       "3  [, people, receive, evacuation, orders, in, ca...   \n",
-       "4  [just, got, sent, this, photo, from, ruby, as,...   \n",
-       "\n",
-       "                                               clean  \n",
-       "0           [deeds, reason, may, allah, forgive, us]  \n",
-       "1      [forest, fire, near, la, ronge, sask, canada]  \n",
-       "2  [residents, asked, shelter, place, notified, o...  \n",
-       "3  [, people, receive, evacuation, orders, califo...  \n",
-       "4   [got, sent, photo, ruby, smoke, pours, school, ]  "
+       "  hashtags mentions  \n",
+       "0  ('', 0)       []  \n",
+       "1  ('', 0)       []  \n",
+       "2  ('', 0)       []  \n",
+       "3  ('', 0)       []  \n",
+       "4  ('', 0)       []  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b68b6fd5",
    "metadata": {},
    "outputs": [],
@@ -225,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "63072632",
    "metadata": {},
    "outputs": [
@@ -272,7 +246,7 @@
        "      <td>our deeds are the reason of this may allah for...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' earthquake', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[our, deeds, are, the, reason, of, this, may, ...</td>\n",
        "    </tr>\n",
@@ -311,7 +285,7 @@
        "      <td>people receive evacuation orders in california</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' wildfires', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[, people, receive, evacuation, orders, in, ca...</td>\n",
        "    </tr>\n",
@@ -324,7 +298,7 @@
        "      <td>just got sent this photo from ruby as smoke fr...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' alaska, wildfires', 2)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[just, got, sent, this, photo, from, ruby, as,...</td>\n",
        "    </tr>\n",
@@ -347,28 +321,74 @@
        "3    people receive evacuation orders in california        1            0   \n",
        "4  just got sent this photo from ruby as smoke fr...       1            0   \n",
        "\n",
-       "                    hashtags mentions  \\\n",
-       "0         (' earthquake', 1)       []   \n",
-       "1                    ('', 0)       []   \n",
-       "2                    ('', 0)       []   \n",
-       "3          (' wildfires', 1)       []   \n",
-       "4  (' alaska, wildfires', 2)       []   \n",
-       "\n",
-       "                                      tokenized_text  \n",
-       "0  [our, deeds, are, the, reason, of, this, may, ...  \n",
-       "1      [forest, fire, near, la, ronge, sask, canada]  \n",
-       "2  [all, residents, asked, to, shelter, in, place...  \n",
-       "3  [, people, receive, evacuation, orders, in, ca...  \n",
-       "4  [just, got, sent, this, photo, from, ruby, as,...  "
+       "  hashtags mentions                                     tokenized_text  \n",
+       "0  ('', 0)       []  [our, deeds, are, the, reason, of, this, may, ...  \n",
+       "1  ('', 0)       []      [forest, fire, near, la, ronge, sask, canada]  \n",
+       "2  ('', 0)       []  [all, residents, asked, to, shelter, in, place...  \n",
+       "3  ('', 0)       []  [, people, receive, evacuation, orders, in, ca...  \n",
+       "4  ('', 0)       []  [just, got, sent, this, photo, from, ruby, as,...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "242464a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['our',\n",
+       " 'deeds',\n",
+       " 'are',\n",
+       " 'the',\n",
+       " 'reason',\n",
+       " 'of',\n",
+       " 'this',\n",
+       " 'may',\n",
+       " 'allah',\n",
+       " 'forgive',\n",
+       " 'us',\n",
+       " 'all']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['tokenized_text'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "070f74e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'our deeds are the reason of this may allah forgive us all'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['text'][0]"
    ]
   },
   {
@@ -381,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "e18c0f23",
    "metadata": {},
    "outputs": [
@@ -400,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "ac3f6594",
    "metadata": {},
    "outputs": [],
@@ -414,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "19a4f85a",
    "metadata": {},
    "outputs": [
@@ -462,7 +482,7 @@
        "      <td>our deeds are the reason of this may allah for...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' earthquake', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[our, deeds, are, the, reason, of, this, may, ...</td>\n",
        "      <td>[deeds, reason, may, allah, forgive, us]</td>\n",
@@ -504,7 +524,7 @@
        "      <td>people receive evacuation orders in california</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' wildfires', 1)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[, people, receive, evacuation, orders, in, ca...</td>\n",
        "      <td>[, people, receive, evacuation, orders, califo...</td>\n",
@@ -518,7 +538,7 @@
        "      <td>just got sent this photo from ruby as smoke fr...</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>(' alaska, wildfires', 2)</td>\n",
+       "      <td>('', 0)</td>\n",
        "      <td>[]</td>\n",
        "      <td>[just, got, sent, this, photo, from, ruby, as,...</td>\n",
        "      <td>[got, sent, photo, ruby, smoke, pours, school, ]</td>\n",
@@ -542,19 +562,12 @@
        "3    people receive evacuation orders in california        1            0   \n",
        "4  just got sent this photo from ruby as smoke fr...       1            0   \n",
        "\n",
-       "                    hashtags mentions  \\\n",
-       "0         (' earthquake', 1)       []   \n",
-       "1                    ('', 0)       []   \n",
-       "2                    ('', 0)       []   \n",
-       "3          (' wildfires', 1)       []   \n",
-       "4  (' alaska, wildfires', 2)       []   \n",
-       "\n",
-       "                                      tokenized_text  \\\n",
-       "0  [our, deeds, are, the, reason, of, this, may, ...   \n",
-       "1      [forest, fire, near, la, ronge, sask, canada]   \n",
-       "2  [all, residents, asked, to, shelter, in, place...   \n",
-       "3  [, people, receive, evacuation, orders, in, ca...   \n",
-       "4  [just, got, sent, this, photo, from, ruby, as,...   \n",
+       "  hashtags mentions                                     tokenized_text  \\\n",
+       "0  ('', 0)       []  [our, deeds, are, the, reason, of, this, may, ...   \n",
+       "1  ('', 0)       []      [forest, fire, near, la, ronge, sask, canada]   \n",
+       "2  ('', 0)       []  [all, residents, asked, to, shelter, in, place...   \n",
+       "3  ('', 0)       []  [, people, receive, evacuation, orders, in, ca...   \n",
+       "4  ('', 0)       []  [just, got, sent, this, photo, from, ruby, as,...   \n",
        "\n",
        "                                               clean  \n",
        "0           [deeds, reason, may, allah, forgive, us]  \n",
@@ -564,13 +577,66 @@
        "4   [got, sent, photo, ruby, smoke, pours, school, ]  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b4fabc08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['our',\n",
+       " 'deeds',\n",
+       " 'are',\n",
+       " 'the',\n",
+       " 'reason',\n",
+       " 'of',\n",
+       " 'this',\n",
+       " 'may',\n",
+       " 'allah',\n",
+       " 'forgive',\n",
+       " 'us',\n",
+       " 'all']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['tokenized_text'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7ae5d2a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['deeds', 'reason', 'may', 'allah', 'forgive', 'us']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['clean'][0]"
    ]
   },
   {
@@ -593,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "605c9114",
    "metadata": {},
    "outputs": [],
@@ -603,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "a89b08ae",
    "metadata": {},
    "outputs": [
@@ -627,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "b4ff25d7",
    "metadata": {},
    "outputs": [
@@ -655,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "dcf71feb",
    "metadata": {},
    "outputs": [],
@@ -664,13 +730,12 @@
     "    lemmatized_output = [lemmatizer.lemmatize(w) for w in word_list]\n",
     "    return lemmatized_output\n",
     "\n",
-    "\n",
     "data['clean_lemma']=data['clean'].apply(lambda x: lemmatize_text(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "c29fa1fd",
    "metadata": {},
    "outputs": [],
