--- a/code-along/day-4/1. Vectorization.ipynb
+++ b/code-along/day-4/1. Vectorization.ipynb
@@ -10,17 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7352300b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.feature_extraction.text import "
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9b8b38fe",
    "metadata": {},
    "outputs": [],
@@ -32,43 +32,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "177fac38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = ()"
+    "cv = CountVectorizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ab45513d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = cv.(sents) \n",
-    "X = X.()"
+    "X = cv.fit_transform(sents) \n",
+    "X = X.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "521eb37c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0],\n",
+       "       [0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0, 1, 1, 1, 0, 1, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9088c212",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['affects',\n",
+       " 'are',\n",
+       " 'at',\n",
+       " 'coronavirus',\n",
+       " 'disease',\n",
+       " 'due',\n",
+       " 'high',\n",
+       " 'highly',\n",
+       " 'infectious',\n",
+       " 'is',\n",
+       " 'most',\n",
+       " 'older',\n",
+       " 'people',\n",
+       " 'risk',\n",
+       " 'the',\n",
+       " 'this',\n",
+       " 'to']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sorted(cv.())"
+    "sorted(cv.vocabulary_.keys())"
    ]
   },
   {
@@ -83,43 +123,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "3b4384ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = (ngram_range=())"
+    "cv = CountVectorizer(ngram_range=(3,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "602f411b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = cv.(sents) \n",
-    "X = X.()"
+    "X = cv.fit_transform(sents) \n",
+    "X = X.toarray()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "8b44170f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0],\n",
+       "       [0, 1, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "2f894a5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['affects older people',\n",
+       " 'are at high',\n",
+       " 'at high risk',\n",
+       " 'coronavirus affects older',\n",
+       " 'coronavirus is highly',\n",
+       " 'due to this',\n",
+       " 'high risk due',\n",
+       " 'highly infectious disease',\n",
+       " 'is highly infectious',\n",
+       " 'older people are',\n",
+       " 'older people the',\n",
+       " 'people are at',\n",
+       " 'people the most',\n",
+       " 'risk due to',\n",
+       " 'to this disease']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sorted(cv.)"
+    "sorted(cv.vocabulary_.keys())"
    ]
   },
   {
