--- a/code-along/day-4/5. Sentiment Analysis.ipynb
+++ b/code-along/day-4/5. Sentiment Analysis.ipynb
@@ -22,24 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "483b7b4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from textblob import "
+    "from textblob import TextBlob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "529c9d16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentiment(polarity=0.5, subjectivity=0.475)\n"
+     ]
+    }
+   ],
    "source": [
     "review = 'WordPress.com works really well with Google for a great SEO ranking.'\n",
     "\n",
-    "blob = (review)\n",
+    "blob = TextBlob(review)\n",
     "for sentence in blob.sentences:\n",
     "    print(sentence.sentiment)"
    ]
@@ -54,12 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0beaf993",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sentiment(polarity=0.9099999999999999, subjectivity=0.7800000000000001)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(\"very good\").sentiment"
+    "TextBlob(\"very good\").sentiment"
    ]
   },
   {
@@ -74,12 +93,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e83f1ae5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sentiment(polarity=-0.35, subjectivity=0.6000000000000001)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(\"not good\").sentiment"
+    "TextBlob(\"not good\").sentiment"
    ]
   },
   {
@@ -92,10 +122,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6e62f4f8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n",
+      "0.26666666666666666\n",
+      "Sentiment(classification='pos', p_pos=0.9999180108027623, p_neg=8.198919723519681e-05)\n"
+     ]
+    }
+   ],
    "source": [
     "from textblob import TextBlob\n",
     "from textblob.sentiments import NaiveBayesAnalyzer\n",
@@ -122,10 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fd28df2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['graduate', 'computer', 'science', 'university', 'machine', 'learning', 'crypto', 'daughter']\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from textblob import Word\n",
@@ -133,7 +181,7 @@
     "blob = TextBlob('I am a graduate of computer science from a good university and I am interested in machine learning and crypto, I am also the first daughter and I have five sisters and we are from London')\n",
     "\n",
     "nouns = list()\n",
-    "for word, tag in blob.:\n",
+    "for word, tag in blob.tags:\n",
     "    if tag == 'NN':\n",
     "        nouns.append(word.lemmatize())\n",
     "print(nouns)"
@@ -141,10 +189,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "339ea54e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is about...\n",
+      "sciences\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"This text is about...\")\n",
     "for item in random.sample(nouns, 5):\n",
@@ -162,13 +219,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cb0f8ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TextBlob(\"I have a car and big house\")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "blob = TextBlob('I have a car and big huse')\n",
-    "blob.()"
+    "blob.correct()"
    ]
   },
   {
@@ -182,32 +250,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "67d92e96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: vaderSentiment in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (3.3.2)\n",
+      "Requirement already satisfied: requests in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from vaderSentiment) (2.25.1)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\rheyannmagcalas\\appdata\\roaming\\python\\python39\\site-packages (from requests->vaderSentiment) (1.26.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests->vaderSentiment) (2021.10.8)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests->vaderSentiment) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\rheyannmagcalas\\anaconda3\\lib\\site-packages (from requests->vaderSentiment) (4.0.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: There was an error checking the latest version of pip.\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install vaderSentiment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "008380be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vaderSentiment.vaderSentiment import \n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "\n",
     "def sentiment_scores(sentence):\n",
     " \n",
     "    # Create a SentimentIntensityAnalyzer object.\n",
-    "    sid_obj = ()\n",
+    "    sid_obj = SentimentIntensityAnalyzer()\n",
     " \n",
     "    # polarity_scores method of SentimentIntensityAnalyzer\n",
     "    # object gives a sentiment dictionary.\n",
     "    # which contains pos, neg, neu, and compound scores.\n",
-    "    sentiment_dict = sid_obj.(sentence)\n",
+    "    sentiment_dict = sid_obj.polarity_scores(sentence)\n",
     "     \n",
     "    print(\"Overall sentiment dictionary is : \", sentiment_dict)\n",
     "    print(\"sentence was rated as \", sentiment_dict['neg']*100, \"% Negative\")\n",
@@ -229,10 +317,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "872cf619",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1st statement :\n",
+      "Overall sentiment dictionary is :  {'neg': 0.0, 'neu': 0.323, 'pos': 0.677, 'compound': 0.6369}\n",
+      "sentence was rated as  0.0 % Negative\n",
+      "sentence was rated as  32.300000000000004 % Neutral\n",
+      "sentence was rated as  67.7 % Positive\n",
+      "Sentence Overall Rated As Positive\n",
+      "\n",
+      "2nd Statement :\n",
+      "Overall sentiment dictionary is :  {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "sentence was rated as  0.0 % Negative\n",
+      "sentence was rated as  100.0 % Neutral\n",
+      "sentence was rated as  0.0 % Positive\n",
+      "Sentence Overall Rated As Neutral\n",
+      "\n",
+      "3rd Statement :\n",
+      "Overall sentiment dictionary is :  {'neg': 0.459, 'neu': 0.541, 'pos': 0.0, 'compound': -0.5256}\n",
+      "sentence was rated as  45.9 % Negative\n",
+      "sentence was rated as  54.1 % Neutral\n",
+      "sentence was rated as  0.0 % Positive\n",
+      "Sentence Overall Rated As Negative\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n1st statement :\")\n",
     "sentence = \"I love NLP\"\n",
