--- a/code-along/day-4/5. Textblob vs Vader.ipynb
+++ b/code-along/day-4/5. Textblob vs Vader.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e8139647",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vaderSentiment.vaderSentiment import \n",
-    "from textblob import "
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "from textblob import TextBlob"
    ]
   },
   {
