--- a/code-along/day-3/data_cleaning/Data Cleaning Social Media.ipynb
+++ b/code-along/day-3/data_cleaning/Data Cleaning Social Media.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "23ddbe83",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_13964\\540732830.py:10: FutureWarning: The demoji.download_codes attribute is deprecated and will be removed from demoji in a future version. It is an unused attribute as emoji codes are now distributed directly with the demoji package.\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_4372\\540732830.py:10: FutureWarning: The demoji.download_codes attribute is deprecated and will be removed from demoji in a future version. It is an unused attribute as emoji codes are now distributed directly with the demoji package.\n",
       "  demoji.download_codes()\n"
      ]
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a90942dd",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f2a2f89b",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6f38021d",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8ccc4c30",
    "metadata": {},
    "outputs": [
@@ -295,12 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "96974505",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['text'] = data[\"text\"].str"
+    "data['text'] = data[\"text\"].str.lower()"
    ]
   },
   {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "2c0cba01",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
     "def expand_contractions(text):\n",
     "    result = text\n",
     "    try:\n",
-    "        result = (text)\n",
+    "        result = contractions.text(text)\n",
     "    except:\n",
     "        pass\n",
     "    \n",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "ec11bcbd",
    "metadata": {},
    "outputs": [],
@@ -475,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "d3b59d21",
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_accented_chars(text):\n",
-    "    new_text = ('NFKD', text).encode('ascii', 'ignore').decode('utf-8', 'ignore')\n",
+    "    new_text = unicodedata.normalize('NFKD', text).encode('ascii', 'ignore').decode('utf-8', 'ignore')\n",
     "    return new_text\n",
     "\n",
     "data['text'] = data.apply(lambda x: remove_accented_chars(str(x['text'])),axis=1)"
@@ -497,13 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "31db5595",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_emoji_count(post):\n",
-    "    emoji = (post)\n",
+    "    emoji = demoji.findall(post)\n",
     "    name = [k for k,v in emoji.items()]\n",
     "    return len(name)\n",
     "\n",
@@ -512,13 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d5975277",
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_emoji(text):\n",
-    "    return ''.join(c for c in str(text) if c not in emoji.UNICODE_EMOJI)\n",
+    "    return ''.join(c for c in str(text) if c not in emoji.EMOJI_DATA)\n",
     "\n",
     "data['text'] = data.apply(lambda x: remove_emoji(x['text']),axis=1)"
    ]
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "68249f93",
    "metadata": {},
    "outputs": [],
@@ -550,13 +550,12 @@
     "    \n",
     "    return len(sample_result)\n",
     "\n",
-    "\n",
     "data['hashtags'] = data.apply(lambda x: get_hashtags(x['text']),axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "1a858b3d",
    "metadata": {},
    "outputs": [
@@ -564,8 +563,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_13964\\4269329851.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  data['text'] = data['text'].str.replace(r'[＃#](\\s\\w+)', ' ', case=False)\n"
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_4372\\2332306136.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  data['text'] = data['text'].str.replace('[＃#](\\s\\w+)', ' ', case=False)\n"
      ]
     }
    ],
@@ -575,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "d78f558f",
    "metadata": {},
    "outputs": [
@@ -585,7 +584,7 @@
        "'our deeds are the reason of this    may allah forgive us all'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,18 +603,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "d9d01dc4",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_mentions(post):\n",
-    "    sample_result = re.findall('', post)\n",
+    "    sample_result = re.findall('@([a-zA-Z0-9]{1,15})', post)\n",
     "    \n",
     "    return sample_result\n",
     "\n",
     "def get_mentions_count(post):\n",
-    "    sample_result = re.findall('', post)\n",
+    "    sample_result = re.findall('@([a-zA-Z0-9]{1,15})', post)\n",
     "    \n",
     "    return len(sample_result)\n",
     "\n",
@@ -624,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "b41efacd",
    "metadata": {},
    "outputs": [
@@ -634,7 +633,7 @@
        "['who', 'doh']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "c1ff90e2",
    "metadata": {},
    "outputs": [
@@ -653,7 +652,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_13964\\4263372094.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_4372\\4263372094.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  data['text'] = data['text'].str.replace('@([a-zA-Z0-9]{1,15})', ' ', case=False)\n"
      ]
     }
