--- a/code-along/day-4/4. TFIDF.ipynb
+++ b/code-along/day-4/4. TFIDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aeb951d7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "35d57884",
    "metadata": {},
    "outputs": [],
@@ -31,21 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9845a447",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bow_a = doc_a\n",
-    "bow_b = doc_b"
+    "bow_a = doc_a.split(\" \")\n",
+    "bow_b = doc_b.split(\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9fc6e1e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The', 'dog', 'sat', 'on', 'my', 'bed']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bow_b"
    ]
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aba0424b",
    "metadata": {},
    "outputs": [],
@@ -70,10 +81,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "4df977f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'The', 'bed', 'cat', 'dog', 'face', 'my', 'on', 'sat'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_set"
    ]
@@ -88,13 +110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ea1d5fdb",
    "metadata": {},
    "outputs": [],
    "source": [
     "word_dict_a = dict.fromkeys(word_set, 0) \n",
     "word_dict_b = dict.fromkeys(word_set, 0) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a82a0e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 0, 'sat': 0, 'The': 0, 'on': 0, 'my': 0, 'bed': 0, 'face': 0, 'dog': 0}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_dict_a"
    ]
   },
   {
@@ -107,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a17bf7c8",
    "metadata": {},
    "outputs": [],
@@ -121,10 +164,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1caec6af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 0, 'sat': 1, 'The': 1, 'on': 1, 'my': 1, 'bed': 1, 'face': 0, 'dog': 1}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_dict_b"
    ]
@@ -139,10 +193,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "317f26cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>sat</th>\n",
+       "      <th>The</th>\n",
+       "      <th>on</th>\n",
+       "      <th>my</th>\n",
+       "      <th>bed</th>\n",
+       "      <th>face</th>\n",
+       "      <th>dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cat  sat  The  on  my  bed  face  dog\n",
+       "0    1    1    1   1   1    0     1    0\n",
+       "1    0    1    1   1   1    1     0    1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame([word_dict_a, word_dict_b])"
    ]
@@ -165,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0547ae1a",
    "metadata": {},
    "outputs": [],
@@ -181,27 +304,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "id": "089bf2cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 1, 'sat': 1, 'The': 1, 'on': 1, 'my': 1, 'bed': 0, 'face': 1, 'dog': 0}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_dict_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "a2c4f275",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 0.16666666666666666,\n",
+       " 'sat': 0.16666666666666666,\n",
+       " 'The': 0.16666666666666666,\n",
+       " 'on': 0.16666666666666666,\n",
+       " 'my': 0.16666666666666666,\n",
+       " 'bed': 0.0,\n",
+       " 'face': 0.16666666666666666,\n",
+       " 'dog': 0.0}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### bow_a = The cat sat on my face\n",
     "\n",
-    "tf_bow_a = (word_dict_a, bow_a)\n",
+    "tf_bow_a = computeTF(word_dict_a, bow_a)\n",
     "tf_bow_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "02638f74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 0.0,\n",
+       " 'sat': 0.16666666666666666,\n",
+       " 'The': 0.16666666666666666,\n",
+       " 'on': 0.16666666666666666,\n",
+       " 'my': 0.16666666666666666,\n",
+       " 'bed': 0.16666666666666666,\n",
+       " 'face': 0.0,\n",
+       " 'dog': 0.16666666666666666}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### The dog sat on my bed\n",
     "\n",
-    "tf_bow_b = (word_dict_b, bow_b)\n",
+    "tf_bow_b = computeTF(word_dict_b, bow_b)\n",
     "tf_bow_b"
    ]
   },
@@ -223,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "68da270e",
    "metadata": {},
    "outputs": [],
@@ -234,6 +414,7 @@
     "    number_of_items = len(doc_list)  ### 2\n",
     "    \n",
     "    idf_dict = dict.fromkeys(doc_list[0].keys(), 0)\n",
+    "#     print(idf_dict)\n",
     "    for doc in doc_list:\n",
     "        for word, val in doc.items():\n",
     "            if val > 0:\n",
@@ -249,12 +430,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ec96d62a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cat': 1, 'sat': 2, 'The': 2, 'on': 2, 'my': 2, 'bed': 1, 'face': 1, 'dog': 1}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'cat': 0.3010299956639812,\n",
+       " 'sat': 0.0,\n",
+       " 'The': 0.0,\n",
+       " 'on': 0.0,\n",
+       " 'my': 0.0,\n",
+       " 'bed': 0.3010299956639812,\n",
+       " 'face': 0.3010299956639812,\n",
+       " 'dog': 0.3010299956639812}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "idfs = ([word_dict_a, word_dict_b])\n",
+    "idfs = computeIDF([word_dict_a, word_dict_b])\n",
     "idfs"
    ]
   },
@@ -276,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "788d8d35",
    "metadata": {},
    "outputs": [],
@@ -291,21 +497,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "3b5de3bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf_bow_a = (tf_bow_a, idfs)\n",
-    "tfidf_bow_b = (tf_bow_b, idfs)"
+    "tfidf_bow_a = computeTFIDF(tf_bow_a, idfs)\n",
+    "tfidf_bow_b = computeTFIDF(tf_bow_b, idfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "0f13eee5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cat</th>\n",
+       "      <th>sat</th>\n",
+       "      <th>The</th>\n",
+       "      <th>on</th>\n",
+       "      <th>my</th>\n",
+       "      <th>bed</th>\n",
+       "      <th>face</th>\n",
+       "      <th>dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.050172</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.050172</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.050172</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.050172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        cat  sat  The   on   my       bed      face       dog\n",
+       "0  0.050172  0.0  0.0  0.0  0.0  0.000000  0.050172  0.000000\n",
+       "1  0.000000  0.0  0.0  0.0  0.0  0.050172  0.000000  0.050172"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.DataFrame([tfidf_bow_a, tfidf_bow_b])"
    ]
@@ -320,10 +595,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "59331244",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>im getting on borderlands and i will murder yo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>I am coming to the borders and I will kill you...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>im getting on borderlands and i will kill you ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>im coming on borderlands and i will murder you...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Positive</td>\n",
+       "      <td>im getting on borderlands 2 and i will murder ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          2                                                  3\n",
+       "0  Positive  im getting on borderlands and i will murder yo...\n",
+       "1  Positive  I am coming to the borders and I will kill you...\n",
+       "2  Positive  im getting on borderlands and i will kill you ...\n",
+       "3  Positive  im coming on borderlands and i will murder you...\n",
+       "4  Positive  im getting on borderlands 2 and i will murder ..."
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load dataset\n",
     "df = pd.read_csv('twitter_training.csv', header=None, usecols=[2,3])\n",
@@ -332,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "5a965512",
    "metadata": {},
    "outputs": [],
@@ -357,13 +701,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "01f7ed35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F-1 score : 0.7313\n"
+     ]
+    }
+   ],
    "source": [
     "# create a bag of words for with unigrams and bigrams\n",
-    "tfidf = (sublinear_tf=True,norm='l2',encoding='utf-8',ngram_range=(1,1), \n",
+    "tfidf = TfidfVectorizer(sublinear_tf=True,norm='l2',encoding='utf-8',ngram_range=(1,1), \n",
     "                        stop_words='english')\n",
     "\n",
     "# convert training data to bag of words\n",
@@ -384,15 +736,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9d577805",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F-1 score of model with n-gram range of (1, 1): 0.7313\n",
+      "F-1 score of model with n-gram range of (1, 2): 0.8324\n",
+      "F-1 score of model with n-gram range of (1, 3): 0.8519\n",
+      "F-1 score of model with n-gram range of (1, 4): 0.8529\n",
+      "F-1 score of model with n-gram range of (1, 5): 0.8516\n",
+      "F-1 score of model with n-gram range of (1, 6): 0.8482\n",
+      "F-1 score of model with n-gram range of (1, 7): 0.8451\n",
+      "F-1 score of model with n-gram range of (1, 8): 0.8424\n",
+      "F-1 score of model with n-gram range of (1, 9): 0.8404\n",
+      "F-1 score of model with n-gram range of (1, 10): 0.8375\n"
+     ]
+    }
+   ],
    "source": [
     "for N in range(1,11):\n",
     "    \n",
     "    # convert training data to bag of words\n",
-    "    tfidf = (sublinear_tf=True,norm='l2',encoding='utf-8',ngram_range=(1,N), \n",
+    "    tfidf = TfidfVectorizer(sublinear_tf=True,norm='l2',encoding='utf-8',ngram_range=(1,N), \n",
     "                        stop_words='english')\n",
     "    X_train_cv = tfidf.fit_transform(X_train)\n",
     "    X_test_cv = tfidf.transform(X_test)\n",
